# ComfyUI-SAM3

./: .gitignore  README.md  __init__.py  comfy-env-root.toml  comfy-env.toml  comfy-test.toml  index.html  install.py  pyproject.toml  requirements.txt  sam3_server.py  speedup.py
.github/workflows/: pr-gate.yml  publish.yml  run-tests.yml
dev/: index.html
dev/linux-cpu/: index.html  models.json  results.json
dev/linux-gpu/: index.html  models.json  results.json
dev/macos-cpu/: index.html  models.json  results.json
dev/macos-desktop/: index.html  results.json
dev/windows-cpu/: index.html  models.json  results.json
dev/windows-desktop/: index.html  results.json
dev/windows-gpu/: index.html  models.json  results.json
dev/windows-portable-cpu/: index.html  models.json  results.json
dev/windows-portable-gpu/: index.html  models.json  results.json
main/: index.html
main/linux-cpu/: index.html  models.json  results.json
main/linux-gpu/: index.html  models.json  results.json
main/macos-cpu/: index.html  models.json  results.json
main/macos-desktop/: index.html  results.json
main/windows-cpu/: index.html  models.json  results.json
main/windows-desktop/: index.html  results.json
nodes/: __init__.py  _comfyui_bootstrap.py  comfy-env.toml  inference_reconstructor.py  load_model.py  sam3_interactive.py  sam3_model_patcher.py  sam3_video_nodes.py  segmentation.py  utils.py  video_state.py
scripts/: convert_sam3_safetensors.py
web/: sam3_bbox_widget.js  sam3_interactive_widget.js  sam3_multiregion_widget.js  sam3_points_widget.js
workflows/: image_seg_point.json  image_seg_point_refinement.json  image_seg_text.json  scene_seg.json  scene_seg_interactive.json  video_point_prompt.json
(+250 files in other folders)
