[project]
name = "comfyui-sam3"
description = "SAM 3 (Segment Anything Model 3) integration for ComfyUI - advanced image and video segmentation with text prompts, boxes, and points. This node is a first draft, please open an issue on GitHub if you encounter any :)"
version = "0.1.2"
license = { file = "LICENSE" }
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-SAM3"
Documentation = "https://github.com/PozzettiAndrea/ComfyUI-SAM3/blob/main/README.md"

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "SAM3"
Icon = ""

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
