[project]
name = "ComfyUI-SAM3"
description = "SAM 3 (Segment Anything Model 3) integration for ComfyUI - advanced image and video segmentation with text prompts, boxes, and points. This node is a first draft, please open an issue on GitHub if you encounter any :)"
version = "0.1.2"
license = {file = "LICENSE"}

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "SAM3"
Icon = ""
