[project]
name = "comfyui-sam3"
description = "SAM 3 (Segment Anything Model 3) integration for ComfyUI. Image and video segmentation with text prompts, boxes, and points"
version = "0.1.19"
license = {file = "LICENSE"}

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "SAM3"
Icon = "https://raw.githubusercontent.com/PozzettiAndrea/ComfyUI-SAM3/main/assets/icon.png"

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-SAM3"
